Bug 77347 - weston-editor keyboard does not appear until mouse move
Summary: weston-editor keyboard does not appear until mouse move
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-11 22:29 UTC by Anu Reddy
Modified: 2014-04-28 19:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston-editor (1.02 MB, video/webm)
2014-04-14 16:27 UTC, Anu Reddy
Details

Description Anu Reddy 2014-04-11 22:29:41 UTC
Description
===========
Weston-editor keyboard does not pop-up after clicking on Entry / Numeric fields until the mouse is moved. The keyboard should pop-up immediately. This is a regression. See attached video for more info.

Same goes with touch events. Keyboard does not pop-up after touching weston-editor fields until mouse is moved. Or touch weston-editor Entry/Numeric field three times to display keyboard.


Software Stack
==============
Kernel: 3.13.6-200.fc20.x86_64
Systemd: 212 (rawhide)
wayland (HEAD) 1.4.91-0-g5e2cfd2
drm (HEAD) libdrm-2.4.52-0-g46d451c
mesa (HEAD) mesa-10.1-0-g4a86465
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.2-0-g121e70d
cairo (HEAD) heads/1.12-0-g59e2a93
libinput (HEAD) remotes/origin/HEAD-0-gc5c503c
weston (HEAD) 1.4.91-0-g79d5a6e
Comment 1 Anu Reddy 2014-04-14 16:27:10 UTC
Created attachment 97358 [details]
weston-editor
Comment 2 Kristian Høgsberg 2014-04-17 05:44:56 UTC
commit a4a6f161290d88895cb7a7172fcee21b1546e0da
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Mon Apr 14 15:48:06 2014 +0300

    animation: Fix input panel slide animation
    
    The position for the slide animation was calculated assuming the value
    of the spring was always between 0.0 and 1.0. Commit 3a869019 broke
    that assumption, and the result was that the panel would be positioned
    at an invisible part of screen. Since there would be no output repaints
    scheduled, the result of the animation would only be seen if something
    else triggered a repaint (such as a mouse cursor movement).
    
    This patch changes the values for the slide animation's spring to range
    between 0.0 and 1.0, thus fixing the position of the panel and the lack
    of scheduled repaints problem.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=77347


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.