src/animation.c
@@ -389,7 +389,7 @@ weston_slide_run(struct weston_view *view, float start, float stop,
 	if (!animation)
 		return NULL;
 
-	weston_spring_init(&animation->spring, 400.0, start, stop);
+	weston_spring_init(&animation->spring, 400.0, 0.0, 1.0);
 	animation->spring.friction = 600;
 	animation->spring.clip = WESTON_SPRING_BOUNCE;
 
